# ShiraNet

./: .gitignore  CMakeLists.txt  JUSTFILE  README.md
docs/: Guidelines.md
examples/tcpEchoManualServer/: CMakeLists.txt
examples/tcpEchoManualServer/src/: main.cpp
examples/tcpEchoShiraNetServer/src/: main.cpp
include/: ShiraNet.hpp
src/buffer/: buffer.hpp
src/error/: error.cpp  error.hpp
src/host/address/: address.hpp
src/logger/: logger.cpp  logger.hpp
src/server/tcp/: tcpServer.cpp  tcpServer.hpp
src/sockets/socket/: socket.cpp  socket.hpp
src/sockets/tcp/: TcpSocket.cpp  TcpSocket.hpp
src/utils/: utils.hpp
